# sermon-cut

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: requirements.txt  thumbnail.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg.rs  main.rs  modal.rs  state.rs  youtube.rs  youtube_dl.rs
src-tauri/src/thumbnail/: color.rs  crop.rs  debug.rs  frames.rs  grading.rs  logo.rs  mod.rs  scoring.rs  yolo.rs
src/components/: DownloadForm.tsx  LocalImage.tsx  ReviewScreen.tsx  Settings.tsx  ThumbnailEditor.tsx  ThumbnailPicker.tsx  TranscriptReview.tsx  VideoLibrary.tsx
src/hooks/: useCanvasEditor.ts  useUpdater.ts  useVideos.ts
src/lib/: clips.ts  processing-context.tsx  tauri.ts  types.ts
