[package]
name = "sermon-cut"
version = "0.2.0"
description = "AI-powered sermon video processing and thumbnail generation"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
futures = "0.3"
glob = "0.3"
md5 = "0.7"
urlencoding = "2.1"
ort = "2.0.0-rc.11"
ndarray = "0.17"
image = { version = "0.25", features = ["jpeg", "png"] }
imageproc = "0.25"
ab_glyph = "0.2"
tempfile = "3.14"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
